--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,7 +73,7 @@
         {% block body %}{% endblock %}
     </div>
 </main>
-<footer class="py-3 fixed-bottom" style="background-color: #d1ecf1;">
+<footer class="py-3" style="background-color: #d1ecf1;">
     <div class="container">
         <p class="text-center">
             &copy; {{ "now"|date("Y") }} Sortir.com<br>
