--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,6 +61,7 @@ h1 {
     color: black;
     text-transform: uppercase;
 }
+
 .btn-action{
     padding: 0.5em 1em!important;
     background-color:#d1ecf1 !important;
@@ -73,60 +74,86 @@ h1 {
     padding: 0.5em 1em!important;
     background-color:#d1ecf1 !important;
     text-decoration: none;
+}
+.btn-afficher i, .btn-modifier i{
     color: #042444!important;
 }
+
 .btn-afficher:hover,.btn-modifier:hover{
     padding: 0.5em 1em!important;
     background-color:#042444 !important;
     text-decoration: none;
+
+}
+.btn-afficher:hover i,.btn-modifier:hover i{
     color: #d1ecf1!important;
 }
 .btn-inscrit{
     padding: 0.5em 1em!important;
     background-color:#b0b084 !important;
     text-decoration: none;
+}
+.btn-inscrit i{
     color: #042444!important;
 }
 .btn-inscrit:hover{
     padding: 0.5em 1em!important;
     background-color: #042444!important;
     text-decoration: none;
+}
+.btn-inscrit:hover i{
     color: #b0b084!important;
 }
 .btn-annuler{
     padding: 0.5em 1em!important;
     background-color:#042444 !important;
     text-decoration: none;
+}
+.btn-annuler i {
     color: #ec1c1c!important;
 }
 .btn-annuler:hover{
     padding: 0.5em 1em!important;
     background-color:#ec1c1c !important;
     text-decoration: none;
+}
+.btn-annuler:hover i{
     color: #042444!important;
 }
+
 .btn-desister{
     padding: 0.5em 1em!important;
     background-color:#b0b084 !important;
     text-decoration: none;
+
+}
+.btn-desister i{
     color: #042444!important;
 }
 .btn-desister:hover{
     padding: 0.5em 1em!important;
     background-color:#042444 !important;
     text-decoration: none;
+
+}
+.btn-desister:hover i{
     color: #ec1c1c!important;
 }
 .btn-publier{
     padding: 0.5em 1em!important;
     background-color:#f2e80e !important;
     text-decoration: none;
+}
+.btn-publier i {
     color: #042444!important;
 }
 .btn-publier:hover{
     padding: 0.5em 1em!important;
     background-color: #042444!important;
     text-decoration: none;
+}
+
+.btn-publier:hover i {
     color: #f2e80e!important;
 }
 .tab-scrollbar {
