--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,18 +25,6 @@ h1 {
 }
 
 
-
-#modification_profil label,
-#modification_profil input,
-#modification_profil select{
-    display: block!important;
-    width: auto!important;
-}
-
-#modification_profil .mb-3{
-    margin: 1em 0!important;
-}
-
 .row{
     display: flex;
     justify-content: center;
@@ -45,7 +33,8 @@ h1 {
 .row .col-lg-6{
     width: 50%!important;
 }
-.row .col-lg-6 div p{
+.row .col-lg-6 div p,
+.view_profil .col-lg-3 div p{
     display: inline-block!important;
 }
 
@@ -54,7 +43,7 @@ h1 {
     margin-top: 2em;
 }
 
-.btn-container a, btn-action{
+ btn-action{
     padding: 0.5em 1em;
     background-color: wheat;
     text-decoration: none;
@@ -169,4 +158,53 @@ select{
 
 #duree-sortie{
     margin-right: 0.5em;
+}
+
+.view_profil a i,
+.edit_profil .btn-action i:not(.edit_profil .col-lg-6 .password .btn-action i){
+    margin-right: 0.5em;
+}
+
+
+.view_profil .col-lg-3{
+    margin: 2.5em 0!important;
+}
+
+/** Edit profil **/
+.edit_profil .row{
+    margin: 2.5em 0!important;
+}
+.edit_profil .col-lg-6 div{
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-gap: 1em;
+    margin: 0.5em 0!important;
+}
+
+.edit_profil .button-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 2.5em;
+}
+
+.edit_profil .button-container a{
+    margin-right: 1em;
+}
+
+.edit_profil .btn-action{
+    border: 2px solid #042444;
+}
+
+.edit_profil .col-lg-6 .password{
+    grid-template-columns: 40% 50% 7.5%;
+    grid-gap: 1em;
+}
+
+.edit_profil .col-lg-6 .password .btn-action{
+    margin-top: 0!important;
+    padding: 0!important;
+}
+
+input{
+    padding: 0 0.5em;
 }
