--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,7 +11,7 @@
     <div class="offset-3 col-6">
 
         {% if error %}
-            <div class="alert alert-danger"> Identifiant ou mot de passe
+            <div class="alert alert-danger js-sweetalert"> Identifiant ou mot de passe
                 incorrect{# *{{ error.messageKey|trans(error.messageData, 'security') }}*/ #}</div>
         {% endif %}
 
