--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,8 @@
     #}
     {% block stylesheets %}
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
         <link href="{{ asset('CSS/styles.css') }}" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -45,10 +46,11 @@
 </head>
 
 <body>
-<script src="js/script.js"></script>
-<script src="js/sweetalert.js"></script>
+<script src="{{ asset ('js/script.js')}}"></script>
+<script src="{{ asset ('js/sweetalert.js')}}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
 <header>
-    <nav class="navbar navbar-light" style="background-color: #d1ecf1;">
+    <div class="header" style="background-color: #d1ecf1;">
         <div class="container">
             <img class="logo" src="{{ asset('images/logo.png') }}">
 
@@ -58,19 +60,24 @@
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>#}
             <nav class="navbar" id="navbar-menu">
-            <div class="hamburger-menu">
-                    <div class="line line-1"></div>
-                    <div class="line line-2"></div>
-                    <div class="line line-3"></div>
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Se connecter</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ path('main') }}">Sorties</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="{{ path('main') }}">Contact</a></li>
-                </ul>
-            </div>
             </nav>
         </div>
     </div>
