--- a/templates/main/creationsortie.html.twig
+++ b/templates/main/creationsortie.html.twig
@@ -70,8 +70,8 @@
         </div>
 
         <div class="button-container">
-            <button class="btn-action" type="submit" name="action" value="1">Enregistrer</button>
-            <button class="btn-action" type="submit" name="action" value="2">Publier</button>
+            <button class="btn-action" type="submit" name="action" value="1"><i class="fas fa-save"></i> Enregistrer</button>
+            <button class="btn-action" type="submit" name="action" value="2"><i class="fas fa-paper-plane"></i> Publier</button>
         </div>
         </div>
     </form>
