--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,6 +84,7 @@ h1 {
 }
 .btn-inscrit i{
     color: #042444!important;
+    max-width: 14px;
 }
 .btn-inscrit:hover{
     padding: 0.5em 1em!important;
@@ -118,6 +119,7 @@ h1 {
 }
 .btn-desister i{
     color: #042444!important;
+    max-width: 14px;
 }
 .btn-desister:hover{
     padding: 0.5em 1em!important;
@@ -128,21 +130,21 @@ h1 {
 .btn-desister:hover i{
     color: #ec1c1c!important;
 }
-.btn-publier{
+.btn-publier:hover{
     padding: 0.5em 1em!important;
     background-color:#f2e80e !important;
     text-decoration: none;
 }
-.btn-publier i {
+.btn-publier:hover i {
     color: #042444!important;
 }
-.btn-publier:hover{
+.btn-publier{
     padding: 0.5em 1em!important;
     background-color: #042444!important;
     text-decoration: none;
 }
 
-.btn-publier:hover i {
+.btn-publier i {
     color: #f2e80e!important;
 }
 .tab-scrollbar {
@@ -176,11 +178,6 @@ h1.titlefiltre{
 select{
     display: inline-block!important;
     width: auto!important;
-}
-
-.create_sortie input{
-    min-width: 30%!important;;
-    text-align: center;
 }
 
 #duree-sortie{
@@ -274,4 +271,58 @@ input{
 
 .login .btn-outline-danger:hover a{
     color: white;
+}
+
+.create_sortie .col-lg-6 div{
+    display: grid;
+    grid-template-columns: 35% 60%;
+    grid-gap: 1em;
+    margin: 0.5em 0!important;
+}
+
+.create_sortie .col-lg-6 div{
+    display: grid;
+    grid-template-columns: 35% 60%;
+    grid-gap: 1em;
+    margin: 0.5em 0!important;
+}
+
+.create_sortie .button-container .btn-action i{
+    margin-right: 0.5em;
+}
+
+.create_sortie .row{
+    margin: 2em 0!important;
+}
+
+.row.date .form-group{
+    display: grid;
+    grid-template-columns: 20% 80%;
+    grid-gap: 1em;
+    margin: 0.5em 0!important;
+}
+
+.row.date .form-group:last-child{
+    grid-template-columns: 10% 80%;
+}
+
+.row.date .form-group label{
+    padding: 0.5em 0
+}
+
+.row.date .form-group:last-child label{
+    margin-left: 0.5em;
+}
+
+.row.home{
+    display: flex;
+    justify-content: space-between!important;
+    flex-direction: row!important;
+    max-width: 80%!important;
+    margin: auto;
+    margin-bottom: 2em;
+}
+
+.row.home .col-lg-6{
+    margin: 0!important;
 }
