Front accueil ok

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -6,7 +6,7 @@
         <div class="col-lg-6">
             <h1 class="titlefiltre">Filtrer les sorties</h1>
         </div>
-        <div class="offset-1 col-lg-6 connectinfo ">
+        <div class=" col-lg-6 connectinfo ">
             Date du jour: {{ "now"|date("m/d/Y") }}</br>
             Participant: {{ user.nom }}  {{ user.prenom }}
         </div>
@@ -101,7 +101,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="table-wrapper-scroll-y tab-scrollbar offset-1 col-9 blocktableau">
+    <div class="table-wrapper-scroll-y tab-scrollbar  col-9 blocktableau">
     <table class="table  table-striped mb-0">
         <thead>
         <tr>
@@ -232,7 +232,7 @@
             </table>
         </div>
     <div class="row">
-    <div class="offset-1 col-9">
+    <div class=" col-9">
         <button class="btn btn-action">
             <a href="{{ path('app_sortie')}}"></a>
                 Créer une sortie
